--- a/gamePage.css
+++ b/gamePage.css
@@ -1,55 +1,87 @@
 body {
-    width: 100%;
-    overflow: hidden;
-    background: url("bg.png");
-    background-size: cover;
-  }
-  #board {
-    position: relative;
-    width: 500px;
-    height: 500px;
-    margin: 40px auto;
-    border: 2px solid white;
-    background-color: black;
-    overflow: hidden;
-  }
+  width: 100%;
+  overflow: hidden;
+  background: url("bg.png");
+  background-size: cover;
+}
+#board {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  margin: 40px auto;
+  border: 2px solid white;
+  background-color: black;
+  overflow: hidden;
+}
 
-  #jet {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background: url("rocket.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    left: 50%;
-    bottom: 0px;
-  }
+#jet {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: url("rocket.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  left: 50%;
+  bottom: 0px;
+}
 
-  .bullets {
-    position: absolute;
-    bottom: 40px;
-    left: 51%;
-    width: 20px;
-    height: 20px;
-    background: url("bullet.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
+.bullets {
+  position: absolute;
+  bottom: 40px;
+  left: 51%;
+  width: 20px;
+  height: 20px;
+  background: url("bullet.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
-  .rocks {
-    position: absolute;
-    top: 0px;
-    width: 50px;
-    height: 50px;
-    background: url("alien.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  #points {
-    position: absolute;
-    top: 0px;
-    margin: 40px;
-    opacity: 0.7;
-    font-size: 10em;
-    color: white;
-  }
+.rocks {
+  position: absolute;
+  top: 0px;
+  width: 50px;
+  height: 50px;
+  background: url("alien.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+#points {
+  position: absolute;
+  top: 0px;
+  margin: 60px;
+  opacity: 0.7;
+  font-size: 10em;
+  color: white;
+}
+#playButton {
+  padding: 15px 50px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #5c7aa3;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 15px #5c7aa3) drop-shadow(0 0 50px #5c7aa3);
+  transition: .5s;
+  position: fixed;
+  top: 75%;
+  right: 0;
+  transform: translateY(-50%);
+  margin-right: 100px;
+}
+
+#playButton:hover {
+  color: #000024;
+  background-color: #5c7aa3;
+  filter: drop-shadow(0 0 10px #5c7aa3) drop-shadow(0 0 30px #5c7aa3); 
+}
+
+#playButton:active {
+  background-color: #5c7aa3;
+  box-shadow: 0 5px #2b273d;
+  transform: translateY(4px);
+}
+
